# DCell

./: .gitignore  .ycm_extra_conf.py  AdvectionSchemes.nb  PetscImport.nb  local.vimrc  lost  makefile  mechanics.nb  petscinit.supp  precis-bookmarks.html  svnignore.sh  upwinding.nb  variables.mk
BCast/: .cproject  .ignore  .project  BCast.c  makefile
Chip Designs/: chip.tif  fluid.tif
Common/: .ignore  Array.c  Bilinear.c  Common.h  Coor.c  Cubic.c  DCellInit.c  Grid.c  Grid.h  Grid3D.c  LeastSq.c  Memcache.c  Octree.c  Quadtree.c  Serialize.c  SpatialIndex.c  UniqueID.c  module.mk
DCell/: .cproject  .project  PetscImport.nb  makefile  makefile.template  variables.mk
DCell/ITK/: CMakeLists.txt  FFTFilter.cpp  FFTFilter3D.cpp  MRFExample.cpp  Makefile  RawToJPEG.cpp  Smoothing.cpp  Smoothing3D.cpp
DWorld/: AdvectiveTransport.c  DCell.c  DCellsArray.c  DWorld.c  DWorld.h  Euler.c  Implicit.c  RHSJacobian.c  Reactions.c  TestReactions.c  viz_GrayScott.nb
FiberField/: CollisionDetection.c  Dynamics.c  Edge.c  Fiber.c  FiberField.c  FiberField.h  FiberField_private.h  FluidVelocity.c  Mass-Spring.nb  Redistribute.c  SpatialBalancing.c  Vertex.c  collagen initialization.nb  edge-edge.nb  makefile  module.mk
FluidField/: FluidField.c  FluidField.h  FluidField_private.h  MatrixAssembly.c  SemiLagrange.c  Solve.c  Strain.c  module.mk  viz.nb
IIM/: BilinearRoot.nb  CrossProductIIM.c  ForceComponents.c  GridToArray.c  IIM.nb  IIM3D.nb  IIM_private.h  ImmersedInterfaceContext.c  ImmersedInterfaceMethod.h  Interpolation.c  IrregularNodes.c  Jump.nb  LocalCoor.c  (+9 more)
(+622 files in other folders)
