cmake_minimum_required(VERSION 2.6)

# This project is designed to be built outside the Insight source tree.
PROJECT(HelloWorld)

# Find ITK.
FIND_PACKAGE(ITK REQUIRED)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ENDIF(ITK_FOUND)

#ADD_EXECUTABLE(a.out MRFExample.cpp )
#TARGET_LINK_LIBRARIES(a.out ITKCommon ITKIO)

#ADD_EXECUTABLE(RawToJPEG RawToJPEG.cpp )
#TARGET_LINK_LIBRARIES(RawToJPEG ITKCommon ITKIO)

#ADD_EXECUTABLE(FFTFilter FFTFilter.cpp )
#TARGET_LINK_LIBRARIES(FFTFilter ITKCommon ITKIO)

#ADD_EXECUTABLE(FFTFilter3D FFTFilter3D.cpp )
#TARGET_LINK_LIBRARIES(FFTFilter3D ITKCommon ITKIO)

#ADD_EXECUTABLE(Labeling Labeling.cpp )
#TARGET_LINK_LIBRARIES(Labeling ITKCommon ITKIO)

ADD_EXECUTABLE(Smoothing Smoothing.cpp )
TARGET_LINK_LIBRARIES(Smoothing ITKCommon ITKIO)

ADD_EXECUTABLE(Smoothing3D Smoothing3D.cpp )
TARGET_LINK_LIBRARIES(Smoothing3D ITKCommon ITKIO)